# sdk-python

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
formamail/: __init__.py  client.py  exceptions.py  http.py  types.py  webhooks.py
formamail/resources/: __init__.py  emails.py  templates.py  webhooks.py
tests/: __init__.py  test_client.py
