[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "formamail"
version = "1.0.0"
description = "Official Python SDK for FormaMail - Send emails with dynamically generated PDF and Excel attachments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "FormaMail", email = "support@formamail.com" }
]
keywords = [
    "formamail",
    "email",
    "transactional",
    "pdf",
    "excel",
    "attachments",
    "sdk",
    "api"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://formamail.com"
Documentation = "https://docs.formamail.com/developer-guide"
Repository = "https://github.com/formamail/sdk-python"
Issues = "https://github.com/formamail/sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["formamail"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = false

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
asyncio_mode = "auto"
